Fixed horizontal scroll bug.

--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -40,7 +40,7 @@
 
 @media only screen and (min-width: 800px) {
     .content {
-        grid-template-columns: 58rem 70rem auto;
+        grid-template-columns: 58rem 67rem auto;
         grid-template-areas: 'left right .';
     }
 
